--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,23 @@
-language: java
+	language: java
+	
+  sudo: required
 
-jdk:
-- oraclejdk8
-
-env:
-  matrix:
-  - COMMIT_ID=b007b22e
-  - COMMIT_ID=efef09b0
-
-before_script:
-- git clone https://github.com/Spirals-Team/maven-repair
-- cd maven-repair
-- mvn install
+	jdk:
+	- oraclejdk8
+	
+	env:
+	  matrix:
+	  - COMMI=b007b22e
+	  - COMMI=efef09b0
+	
+	before_script:
+	- git clone https://github.com/Spirals-Team/maven-repair
+	- cd maven-repair
+	- mvn install
+	
+	script:
+	- cd /home/travis/build/plarentih/repairBugsJar/script
+	- python bugs-dot-jar.py checkout -p accumulo -i $COMMI
+	
+	- cd /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMIT_ID && mvn fr.inria.gforge.spirals:repair-maven-plugin:nopol
+	- cd /home/travis/build/plarentih/repairBugsJar
