--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ before_script:
 
 script:
 - cd /home/travis/build/plarentih/repairBugsJar/script
-- python bugs-dot-jar.py checkout -p accumulo -i $COMMI	
-- cd /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMI && mvn fr.inria.gforge.spirals:repair-maven-plugin:nopol
+- python bugs-dot-jar.py checkout -p accumulo -i $COMMI
+- cd /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMI
+- mvn fr.inria.gforge.spirals:repair-maven-plugin:nopol
 - cd /home/travis/build/plarentih/repairBugsJar
