--- a/.travis.yml
+++ b/.travis.yml
@@ -25,5 +25,7 @@ script:
 - cd /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMI
 - mvn -X fr.inria.gforge.spirals:repair-maven-plugin:nopol
 - d=/home/travis/build/plarentih/repairBugsJar/results/accumulo/$COMMI/nopol
-- test -d "$d" || mkdir -p "$d" && cp -Rf target/nopol/output.json "$d"
+- test -d "$d" || mkdir -p "$d" && cp -Rf /home/travis/build/plarentih/repairBugsJar/results/accumulo/$COMMI/nopol/output.json "$d"
+- git commit -m "update results"
+- git push
 - cd /home/travis/build/plarentih/repairBugsJar
