--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ script:
 - cd /home/travis/build/plarentih/repairBugsJar/script
 - python bugs-dot-jar.py checkout -p accumulo -i $COMMI
 - cd /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMI
+- mvn test -DtrimStackTrace=false
 - mvn -X fr.inria.gforge.spirals:repair-maven-plugin:nopol
 - d=/home/travis/build/plarentih/repairBugsJar/results/accumulo/$COMMI/nopol
 - test -d $d || mkdir -p $d && cp -Rf /home/travis/build/plarentih/repairBugsJar/bugs/accumulo/$COMMI/target/nopol/output.json $d
